// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<withRouter(App)
  currentEdition="community"
  fetchPendingPlugins={[Function]}
  location={
    {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": {},
      "search": "",
      "state": {},
    }
  }
  pendingPlugins={
    {
      "installing": [],
      "removing": [],
      "updating": [],
    }
  }
  standaloneMode={true}
  updateCenterActive={false}
/>
`;

exports[`should render correctly: update center active 1`] = `
<withRouter(App)
  currentEdition="community"
  fetchPendingPlugins={[Function]}
  location={
    {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": {},
      "search": "",
      "state": {},
    }
  }
  pendingPlugins={
    {
      "installing": [],
      "removing": [],
      "updating": [],
    }
  }
  updateCenterActive={true}
/>
`;
